src/style/components/tabbed-panel.styl
.tabbed-panel
  enable-flex(justify:flex-start, alignContent:stretch, alignItems:stretch)
  width 690px
  height: 400px
  border-radius 5px
  .workspace-tabs
    width 30%
    width dialog-tab-width
    padding 20px 0
    margin 0px
    background-color: white
    .workspace-tab
      blenderbox-modal-labels()
      font-size 15px
      -webkit-border-radius tab-border-radius
      -moz-border-radius tab-border-radius
      border-radius: tab-border-radius
      margin 10px 26px 10px 30px
      padding 10px
      color #000
      background-color #c8e7de
      cursor pointer
      &.tab-selected
        -webkit-border-top-right-radius 0
        -webkit-border-bottom-right-radius 0
        -moz-border-radius-topright 0
        -moz-border-radius-bottomright 0
        border-top-right-radius 0
        border-bottom-right-radius 0
        color #fff
        background-color #72bca6
        margin-right 0

  .workspace-tab-component
    position relative
    margin 0px
    width 70%
    border-left 5px solid #72bca6
    padding 10px
    padding-bottom 50px

    .dialogTab
      input[type=text]
        width 100%
        font-size 20px
        padding 5px
      .dialogClearFilter
        position absolute
        margin-top -25px
        right 20px
        cursor pointer
        color #000
      .filelist
        height 275px
        overflow auto
        margin 10px 0
        cursor pointer
        -webkit-user-select: none
        -moz-user-select: none
        -ms-user-select: none
        user-select: none;
        div
          margin 2px 0
          padding 2px
          font-size 19px
          line-height 1.3
          color: #000
          i
            margin-right 7px
        div.selected
          color: #fff
          background-color #72bfca
        div.selectable:hover
          color: #fff
          background-color: green-blue
        div.subfolder
          margin-left 10px
      .provider-message
        position absolute
        bottom 10px
        left 10px
        right 190px /* for wrapping around buttons */
        height 50px
        display flex
        flex-direction column
        gap 5px
        justify-content center
        color #000
        font-size 12px
        .provider-message-action
          cursor pointer
          color blue
          &:hover
            text-decoration underline
      .buttons
        position absolute
        bottom 10px
        right 10px
        button
          modal-button()
          margin-left 10px
        button.disabled
          background-color: #777
        a
          modal-button()
          margin-right 0px
          text-decoration none
        a.disabled
          background-color #777

